--- a/roles/ceph-handler/tasks/handler_mdss.yml
+++ b/roles/ceph-handler/tasks/handler_mdss.yml
@@ -1,8 +1,4 @@
 ---
-- name: set _mds_handler_called before restart
-  set_fact:
-    _mds_handler_called: True
-
 - name: copy mds restart script
   template:
     src: restart_mds_daemon.sh.j2
@@ -13,13 +9,7 @@
 
 - name: restart ceph mds daemon(s)
   command: /usr/bin/env bash {{ hostvars[item]['tmpdirpath']['path'] }}/restart_mds_daemon.sh
-  when:
-    - hostvars[item]['handler_mds_status'] | default(False) | bool
-    - hostvars[item]['_mds_handler_called'] | default(False) | bool
+  when: hostvars[item]['handler_mds_status'] | default(False) | bool
   with_items: "{{ groups[mds_group_name] }}"
   delegate_to: "{{ item }}"
   run_once: True
-
-- name: set _mds_handler_called after restart
-  set_fact:
-    _mds_handler_called: False
