--- a/roles/ceph-handler/tasks/handler_nfss.yml
+++ b/roles/ceph-handler/tasks/handler_nfss.yml
@@ -1,8 +1,4 @@
 ---
-- name: set _nfs_handler_called before restart
-  set_fact:
-    _nfs_handler_called: True
-
 - name: copy nfs restart script
   template:
     src: restart_nfs_daemon.sh.j2
@@ -13,13 +9,7 @@
 
 - name: restart ceph nfs daemon(s)
   command: /usr/bin/env bash {{ hostvars[item]['tmpdirpath']['path'] }}/restart_nfs_daemon.sh
-  when:
-    - hostvars[item]['handler_nfs_status'] | default(False) | bool
-    - hostvars[item]['_nfs_handler_called'] | default(False) | bool
+  when: hostvars[item]['handler_nfs_status'] | default(False) | bool
   with_items: "{{ groups[nfs_group_name] }}"
   delegate_to: "{{ item }}"
   run_once: True
-
-- name: set _nfs_handler_called after restart
-  set_fact:
-    _nfs_handler_called: False
