--- a/roles/ceph-handler/tasks/handler_rbdmirrors.yml
+++ b/roles/ceph-handler/tasks/handler_rbdmirrors.yml
@@ -1,8 +1,4 @@
 ---
-- name: set _rbdmirror_handler_called before restart
-  set_fact:
-    _rbdmirror_handler_called: True
-
 - name: copy rbd mirror restart script
   template:
     src: restart_rbd_mirror_daemon.sh.j2
@@ -13,13 +9,7 @@
 
 - name: restart ceph rbd mirror daemon(s)
   command: /usr/bin/env bash {{ hostvars[item]['tmpdirpath']['path'] }}/restart_rbd_mirror_daemon.sh
-  when:
-    - hostvars[item]['handler_rbd_mirror_status'] | default(False) | bool
-    - hostvars[item]['_rbdmirror_handler_called'] | default(False) | bool
+  when: hostvars[item]['handler_rbd_mirror_status'] | default(False) | bool
   with_items: "{{ groups[rbdmirror_group_name] }}"
   delegate_to: "{{ item }}"
   run_once: True
-
-- name: set _rbdmirror_handler_called after restart
-  set_fact:
-    _rbdmirror_handler_called: False
